--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/uuid": "^10.0.0",
     "apollo-cache-persist": "^0.1.1",
     "apollo3-cache-persist": "^0.15.0",
+    "atob": "link:core-js/stable/atob",
     "autoprefixer": "10.4.14",
     "chart.js": "^4.4.4",
     "clsx": "^2.1.1",
