--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "apollo3-cache-persist": "^0.15.0",
     "atob": "link:core-js/stable/atob",
     "autoprefixer": "10.4.14",
+    "axios": "^1.10.0",
     "chart.js": "^4.4.4",
     "clsx": "^2.1.1",
     "cookies-next": "^4.2.1",
