--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "use-immer": "^0.10.0",
     "usehooks-ts": "^2.16.0",
     "uuid": "^10.0.0",
+    "xlsx": "^0.18.5",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
