--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "HOSTNAME=0.0.0.0 next start -p 3000",
     "lint": "next lint",
     "codegen": "graphql-codegen --watch --config codegen.ts"
   },
